Restructure the project folder
